EXTRA_DIST = documentation.py README.in

docsdir = $(datadir)/doc/$(PACKAGE)
docs_DATA = documentation.py README

examplesdir = $(datadir)/doc/$(PACKAGE)/examples
examples_DATA =					\
	background-image.py			\
	block-size-column.py		\
	location-widget-provider.py \
	open-terminal.py			\
	md5sum-property-page.py		\
	submenu.py                  \
	update-file-info-async.py

EXTRA_DIST += $(examples_DATA)

CLEANFILES = README
