entities = configure_file(
  input: 'entities.docbook.in',
  output: 'entities.docbook',
  configuration: {
    'VERSION': meson.project_version(),
  },
)

gnome.gtkdoc(
  'nautilus-python',
  main_xml: 'nautilus-python-ref.xml',
  src_dir: 'src',
  content_files: [
    entities,
    'nautilus-python-class-reference.xml',
    'nautilus-python-column-provider.xml',
    'nautilus-python-column.xml',
    'nautilus-python-enum-reference.xml',
    'nautilus-python-file-info.xml',
    'nautilus-python-info-provider.xml',
    'nautilus-python-menu-item.xml',
    'nautilus-python-menu-provider.xml',
    'nautilus-python-menu.xml',
    'nautilus-python-migrating-to-4.xml',
    'nautilus-python-operation-result.xml',
    'nautilus-python-overview-example.xml',
    'nautilus-python-overview-methods.xml',
    'nautilus-python-overview.xml',
    'nautilus-python-properties-item.xml',
    'nautilus-python-properties-model-provider.xml',
    'nautilus-python-properties-model.xml',
    'nautilus-python-provider-reference.xml',
    '../../examples/TestExtension.py',
    '../../examples/background-image.py',
    '../../examples/block-size-column.py',
    '../../examples/md5sum-properties-model.py',
    '../../examples/open-terminal.py',
    '../../examples/submenu.py',
    '../../examples/update-file-info-async.py',
  ],
  install: true,
)
